--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,7 +45,7 @@ p.anchor {
 }
 
 div.page {
-  padding-top: 9rem;
+  padding-top: 6rem;
 }
 
 div.narrowed {
@@ -65,6 +65,20 @@ div.narrowed {
 .tag {
   float: right;
   text-align: right;
+}
+
+.method-section {
+  margin: 4rem 0 1rem 0;
+  @include mixins.from(1024px) {
+    margin: 9rem 0 2rem 0;
+  }
+}
+
+.method-subtitle {
+  margin: 4rem 0 4rem 0;
+  @include mixins.from(1024px) {
+    margin: 6rem 0 2rem 0;
+  }
 }
 
 .company-desc {
@@ -220,6 +234,7 @@ div.narrowed {
   color: white;
   line-height: 2.6rem;
   font-weight: normal;
+  /* margin-top: 6rem; */
   @include mixins.until(768px) {
     line-height: 2rem;
   }
@@ -346,9 +361,9 @@ img.rounded {
 }
 
 .service-subtitle {
-  line-height: 1.6rem;
+  /* line-height: 1.6rem; */
   letter-spacing: -0.1rem;
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
 }
 
 .shorts-title {
